# serializer version: 1
# name: TestOpenMOHAAGenerator.test_generate[Medal of Honor - Allied Assault - Breakthrough.mohaa]
  tuple(
    list([
      '/usr/bin/openmohaa/openmohaa',
      '+set',
      'com_homepath',
      'configs/openmohaa',
      '+set',
      'com_target_game',
      '2',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenMOHAAGenerator.test_generate[Medal of Honor - Allied Assault - Breakthrough.mohaa][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate[Medal of Honor - Allied Assault - Spearhaed.mohaa]
  tuple(
    list([
      '/usr/bin/openmohaa/openmohaa',
      '+set',
      'com_homepath',
      'configs/openmohaa',
      '+set',
      'com_target_game',
      '1',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenMOHAAGenerator.test_generate[Medal of Honor - Allied Assault - Spearhaed.mohaa][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate[Medal of Honor - Allied Assault.mohaa]
  tuple(
    list([
      '/usr/bin/openmohaa/openmohaa',
      '+set',
      'com_homepath',
      'configs/openmohaa',
      '+set',
      'com_target_game',
      '0',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenMOHAAGenerator.test_generate[Medal of Honor - Allied Assault.mohaa][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_brightness': '2.42'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "2.42"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_colour': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_colour': '16'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "16"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_compression': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_compression': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "1"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_crosshair': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "0"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_crosshair': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_curve': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "20"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_curve': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "10"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_curve': '2'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_curve': '3'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "3"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_decals': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_decals': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "1"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_dynamic_lighting': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "0"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_dynamic_lighting': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_effects': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_effects': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.3"
  seta vss_maxcount "23"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_effects': '2'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.5"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_effects': '3'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.7"
  seta vss_maxcount "20"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_effects': '4'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.8"
  seta vss_maxcount "18"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_effects': '5'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.95"
  seta vss_maxcount "15"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_effects': '6'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "1.0"
  seta vss_maxcount "10"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_entity_lighting': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "0"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_entity_lighting': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_model': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.25"
  seta r_lodscale "0.25"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_model': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "0.35"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_model': '2'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.45"
  seta r_lodcap "0.35"
  seta r_lodscale "0.45"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_model': '3'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.55"
  seta r_lodcap "0.5"
  seta r_lodscale "0.55"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_model': '4'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.9"
  seta r_lodcap "0.9"
  seta r_lodscale "0.9"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_model': '5'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_shadows': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "0"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_shadows': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_smoke': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_smoke': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "1"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_subtitles': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_subtitles': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "1"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_terrain': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "3"
  seta ter_error "10"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_terrain': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "4"
  seta ter_error "9"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_terrain': '2'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "5"
  seta ter_error "7"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_terrain': '3'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_texture': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_texture': '2'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "2"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_texture_colour': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_texture_colour': '16'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "16"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_texture_filter': 'GL_LINEAR_MIPMAP_NEAREST'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_texture_filter': 'gl_linear_mipmap_linear'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "gl_linear_mipmap_linear"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_view': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "0"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_view': '2'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_weapons': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "0"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_weapons': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_weather': '0'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_config[{'mohaa_weather': '1'}][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta cg_marks_add "0"
  seta cg_rain "1"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  seta ui_crosshair "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_existing[Medal of Honor - Allied Assault - Breakthrough.mohaa]
  tuple(
    list([
      '/usr/bin/openmohaa/openmohaa',
      '+set',
      'com_homepath',
      'configs/openmohaa',
      '+set',
      'com_target_game',
      '2',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenMOHAAGenerator.test_generate_existing[Medal of Honor - Allied Assault - Breakthrough.mohaa][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta ui_crosshair "1"
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_existing[Medal of Honor - Allied Assault - Spearhaed.mohaa]
  tuple(
    list([
      '/usr/bin/openmohaa/openmohaa',
      '+set',
      'com_homepath',
      'configs/openmohaa',
      '+set',
      'com_target_game',
      '1',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenMOHAAGenerator.test_generate_existing[Medal of Honor - Allied Assault - Spearhaed.mohaa][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta ui_crosshair "1"
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_generate_existing[Medal of Honor - Allied Assault.mohaa]
  tuple(
    list([
      '/usr/bin/openmohaa/openmohaa',
      '+set',
      'com_homepath',
      'configs/openmohaa',
      '+set',
      'com_target_game',
      '0',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenMOHAAGenerator.test_generate_existing[Medal of Honor - Allied Assault.mohaa][config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta r_colorbits "0"
  seta r_picmip "1"
  seta r_texturebits "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta ui_crosshair "1"
  seta r_customaspect "1"
  bind [ "weapprev"
  bind ] "weapnext"
  seta cg_marks_add "0"
  seta cg_rain "0"
  seta r_gamma "1.000000"
  seta r_ext_compressed_textures "0"
  seta cg_drawviewmodel "2"
  seta cg_shadows "1"
  seta ter_maxlod "6"
  seta ter_error "4"
  seta r_lodviewmodelcap "0.25"
  seta r_lodcap "0.35"
  seta r_lodscale "5"
  seta cg_effectdetail "0.2"
  seta vss_maxcount "22"
  seta r_subdivisions "4"
  seta g_subtitle "0"
  seta r_fastdlights "1"
  seta r_fastentlight "1"
  seta vss_draw "0"
  seta ui_weaponsbar "1"
  
  '''
# ---
# name: TestOpenMOHAAGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_ESC',
      'pause': 'KEY_PAUSE',
      'restore_state': 'KEY_F9',
      'save_state': 'KEY_F5',
    }),
    'name': 'openmohaa',
  })
# ---
